Intro close to done.

--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   },
   "dependencies": {
     "3d-force-graph": "^1.66.4",
+    "@apollo/federation": "^0.18.0",
+    "@apollo/gateway": "^0.18.0",
     "aframe": "^1.0.4",
     "aframe-forcegraph-component": "^2.27.1",
     "binarysearch": "^1.0.0",
     "graphql": "^15.3.0",
+    "graphql-tag": "^2.10.4",
+    "graphql-tools": "^6.0.15",
     "highlight.js": "^10.1.1",
     "highlightjs-graphql": "^1.0.1",
     "three-spritetext": "^1.5.1"
