--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "graphql-import-macro": "^1.0.0",
     "less": "^3.12.2",
     "parcel": "^2.0.0-beta.1"
   },
